--- a/TodoApi.csproj
+++ b/TodoApi.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TodoLibrary\TodoLibrary.csproj" />
+    <ProjectReference Include="..\tc_todo_library\TodoLibrary.csproj" />
   </ItemGroup>
 
 </Project>
